<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

     <TextView
         android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="4dp"
         android:paddingStart="5dp"
         android:text="@string/name_rayhan"
         android:textSize="15sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/uname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingLeft="5dp"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingStart="5dp"
            android:text="@string/email_mdrayhan8045_gmail_com"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uname"/>

        <ImageView
            android:id="@+id/update"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/undo_arrow_icon"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/address"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/street"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:text="@string/stree"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address"/>

            <TextView
                android:id="@+id/suite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/suite"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/street"/>

            <TextView
                android:id="@+id/city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/city"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/suite"/>

            <TextView
                android:id="@+id/zipcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="zipcode"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city"/>

            <TextView
                android:id="@+id/lat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/lat"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zipcode"/>

            <TextView
                android:id="@+id/lng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/lng"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lat"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>