<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".view.UploadFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2D3C8C"
        android:text="@string/zyntra"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userid"
        android:layout_marginHorizontal="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginHorizontal="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_text"
            android:layout_marginHorizontal="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/writetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/click_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#377874"
            app:cornerRadius="7dp"
            android:layout_marginHorizontal="100dp"
            android:elevation="15dp"
            android:text="@string/save"
            android:textSize="17sp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>


</LinearLayout>